--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vyayamshala</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" href="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/maki_fitness-centre.png?raw=true">
     <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900">
 </head>
 <body>
@@ -58,7 +59,7 @@
         </button>
     </header>
 
-    <div class="speech1">
+    <section class="speech1">
         <div class="sp1">
             <h1>Join The World Of Fitness.</h1>
             <p class="p1">Our aim is to bring more people into fitness so that every indivisual, family,society and whole nation.</p>
@@ -88,9 +89,9 @@
             </div>
         </div>
         <img class="img1" height="500px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%201.png?raw=true" alt="">
-    </div>
+    </section>
 
-    <div class="speech2" id="services">
+    <section class="speech2" id="services">
         <div class="sp">
             <h1 class="g1">Services</h1>
             <h2 class="s2">We provide service that 
@@ -111,9 +112,9 @@
                 <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20953.png?raw=true" alt="">
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="speech3" id="review">
+    <section class="speech3" id="review">
         <div class="sp3"> 
             <center><h1>Stories of our</h1>
             <h1><span>Vyayamshala</span> family</h1></center>
@@ -146,9 +147,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="speech4" id="contact">
+    <section class="speech4" id="contact">
         <center><h1>What's <span>Stopping</span> you?</h1></center>
         <div class="sp4">
             <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%202283.png?raw=true" alt="">
@@ -160,9 +161,9 @@
                 <button class="but1">Join Now</button>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="footer1">
+    <footer class="footer1">
         <div class="foo1">
             <a href="">Home</a>
             <a href="">About</a>
@@ -179,9 +180,9 @@
             <p>+977-[0]61-428793</p>
         </div>
         <img width="350px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%2040.png?raw=true" alt="">
-    </div>
+    </footer>
 
-    <div class="footer2">
+    <footer class="footer2">
         <p>Copyright @ 2021 Vyayamshala</p>
         <div class="social">
             <img width="20px" height="20px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/bx_bxl-facebook.png?raw=true" alt="">
@@ -189,6 +190,6 @@
             <img width="20px" height="20px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Vector%20(1).png?raw=true" alt="">
         </div>
         <p>Created by Brandbuilder</p>
-    </div>
+    </footer>
 </body>
 </html>
