--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Vyayamshala</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <link rel="icon" href="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/maki_fitness-centre.png?raw=true">
+    <link rel="icon" href="img//maki_fitness-centre.png?raw=true">
     <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900">
 </head>
 <body>
     <header class="header" id="header">
         <div class="icon-header">
-            <img width="25px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/maki_fitness-centre.png?raw=true" alt="">
+            <img width="25px" src="img/maki_fitness-centre.png?raw=true" alt="">
             <p>Vyayamshala</p>
         </div>
         <div class="nav-bar">
@@ -66,7 +66,7 @@
             <div class="into1">
                 <button class="but1">Join Now</button>
                 <div class="into11">
-                    <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/bi_play-circle.png?raw=true" alt="">
+                    <img src="img//bi_play-circle.png?raw=true" alt="">
                     <p>Watch video</p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <img class="img1" height="500px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%201.png?raw=true" alt="">
+        <img class="img1" height="500px" src="img//Rectangle 201.png?raw=true" alt="">
     </section>
 
     <section class="speech2" id="services">
@@ -102,14 +102,14 @@
 
         <div class="sp2">
             <div class="ss">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20948.png?raw=true" alt="">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20949.png?raw=true" alt="">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20950.png?raw=true" alt="">
+                <img src="img//Group 20948.png?raw=true" alt="">
+                <img src="img//Group 20949.png?raw=true" alt="">
+                <img src="img//Group 20950.png?raw=true" alt="">
             </div>
             <div class="ss">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20951.png?raw=true" alt="">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20952.png?raw=true" alt="">
-                <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20953.png?raw=true" alt="">
+                <img src="img//Group 20951.png?raw=true" alt="">
+                <img src="img//Group 20952.png?raw=true" alt="">
+                <img src="img//Group 20953.png?raw=true" alt="">
             </div>
         </div>
     </section>
@@ -128,11 +128,11 @@
         <div class="sp33">
             <div class="s3">
                 <div class="sss">
-                    <img width="250px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20838.png?raw=true" alt="">
+                    <img width="250px" src="img//Group 20838.png?raw=true" alt="">
                     <p>After</p>
                 </div>
                 <div class="s">
-                    <img width="170px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Group%20955.png?raw=true" alt="">
+                    <img width="170px" src="img//Group 20955.png?raw=true" alt="">
                 </div>
             </div>
             <div class="s33">
@@ -152,7 +152,7 @@
     <section class="speech4" id="contact">
         <center><h1>What's <span>Stopping</span> you?</h1></center>
         <div class="sp4">
-            <img src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%202283.png?raw=true" alt="">
+            <img src="img//Rectangle 202283.png?raw=true" alt="">
             <div class="sp44">
                 <h2>Become a part of our family</h2>
                 <p>Leave your details and we will get back to you !</p>
@@ -179,17 +179,18 @@
             <p>Pokhara, Nepal</p>
             <p>+977-[0]61-428793</p>
         </div>
-        <img width="350px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Rectangle%2040.png?raw=true" alt="">
+        <img width="350px" src="img//Rectangle 2040.png?raw=true" alt="">
     </footer>
 
     <footer class="footer2">
         <p>Copyright @ 2021 Vyayamshala</p>
         <div class="social">
-            <img width="20px" height="20px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/bx_bxl-facebook.png?raw=true" alt="">
-            <img width="20px" height="20px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Vector.png?raw=true" alt="">
-            <img width="20px" height="20px" src="https://github.com/esraa-emary/photos/blob/main/Vyayamshala/Vector%20(1).png?raw=true" alt="">
+            <img width="20px" height="20px" src="img//bx_bxl-facebook.png?raw=true" alt="">
+            <img width="20px" height="20px" src="img//Vector.png?raw=true" alt="">
+            <img width="20px" height="20px" src="img//Vector 20(1).png?raw=true" alt="">
         </div>
         <p>Created by Brandbuilder</p>
     </footer>
 </body>
 </html>
+
