--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <img class="img1" height="500px" src="img/Rectangle 201.png" alt="">
+        <img class="img1" height="500px" src="img/Rectangle1.png" alt="">
     </section>
 
     <section class="speech2" id="services">
@@ -102,14 +102,14 @@
 
         <div class="sp2">
             <div class="ss">
-                <img src="img/Group 20948.png" alt="">
-                <img src="img/Group 20949.png" alt="">
-                <img src="img/Group 20950.png" alt="">
+                <img src="img/Group948.png" alt="">
+                <img src="img/Group949.png" alt="">
+                <img src="img/Group950.png" alt="">
             </div>
             <div class="ss">
-                <img src="img/Group 20951.png" alt="">
-                <img src="img/Group 20952.png" alt="">
-                <img src="img/Group 20953.png" alt="">
+                <img src="img/Group951.png" alt="">
+                <img src="img/Group952.png" alt="">
+                <img src="img/Group953.png" alt="">
             </div>
         </div>
     </section>
@@ -128,11 +128,11 @@
         <div class="sp33">
             <div class="s3">
                 <div class="sss">
-                    <img width="250px" src="img/Group 20838.png" alt="">
+                    <img width="250px" src="img/Group838.png" alt="">
                     <p>After</p>
                 </div>
                 <div class="s">
-                    <img width="170px" src="img/Group 20955.png" alt="">
+                    <img width="170px" src="img/Group955.png" alt="">
                 </div>
             </div>
             <div class="s33">
@@ -152,7 +152,7 @@
     <section class="speech4" id="contact">
         <center><h1>What's <span>Stopping</span> you?</h1></center>
         <div class="sp4">
-            <img src="img/Rectangle 202283.png" alt="">
+            <img src="img/Rectangle2283.png" alt="">
             <div class="sp44">
                 <h2>Become a part of our family</h2>
                 <p>Leave your details and we will get back to you !</p>
@@ -179,7 +179,7 @@
             <p>Pokhara, Nepal</p>
             <p>+977-[0]61-428793</p>
         </div>
-        <img width="350px" src="img/Rectangle 2040.png" alt="">
+        <img width="350px" src="img/Rectangle40.png" alt="">
     </footer>
 
     <footer class="footer2">
@@ -187,12 +187,13 @@
         <div class="social">
             <img width="20px" height="20px" src="img/bx_bxl-facebook.png" alt="">
             <img width="20px" height="20px" src="img/Vector.png" alt="">
-            <img width="20px" height="20px" src="img/Vector 20(1).png" alt="">
+            <img width="20px" height="20px" src="img/Vector1.png" alt="">
         </div>
         <p>Created by Brandbuilder</p>
     </footer>
 </body>
 </html>
+
 
 
 
